--- a/package.json
+++ b/package.json
@@ -38,7 +38,16 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "prettier": "^2.8.4",
+    "rehype-highlight": "^6.0.0",
+    "rehype-raw": "^6.1.1",
+    "rehype-stringify": "^9.0.3",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "unified": "^10.1.2",
+    "vite": "^4.2.0",
+    "yaml": "^2.2.1"
   }
 }
