--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,8 +3,9 @@
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
+    "lib": ["DOM", "ESNext", "ES2015", "ES2017"],
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": ["vite.config.ts", "plugin"]
 }
