--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.9.0",
-    "styled-components": "^5.3.9"
+    "styled-components": "^5.3.9",
+    "swiper": "^11.1.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.4.4",
